# service/src/main/java/br/com/sw2you/realmeet/controller/AllocationController.java
@@ -36,4 +36,10 @@ public class AllocationController implements AllocationsApi {
         return runAsync(() -> allocationService.deleteAllocation(id), controllerExecutor)
                 .thenApply(ResponseEntityUtils::noContent);
     }
+
+    @Override
+    public CompletableFuture<ResponseEntity<Void>> updateAllocation(Long id, UpdateAllocationDTO updateAllocationDTO) {
+        return runAsync(() -> allocationService.updateAllocation(id, updateAllocationDTO), controllerExecutor)
+                .thenApply(ResponseEntityUtils::noContent);
+    }
 }
