# service/src/main/java/br/com/sw2you/realmeet/validator/AllocationValidator.java
@@ -6,6 +6,7 @@ import static java.util.Objects.isNull;
 
 import br.com.sw2you.realmeet.api.model.CreateAllocationDTO;
 import br.com.sw2you.realmeet.api.model.CreateRoomDTO;
+import br.com.sw2you.realmeet.api.model.UpdateAllocationDTO;
 import br.com.sw2you.realmeet.api.model.UpdateRoomDTO;
 import br.com.sw2you.realmeet.repository.AllocationRepository;
 import br.com.sw2you.realmeet.repository.RoomRepository;
@@ -31,6 +32,18 @@ public class AllocationValidator {
         validateEmployeeName(createAllocationDTO.getEmployeeName(), validationErrors);
         validateEmployeeEmail(createAllocationDTO.getEmployeeEmail(), validationErrors);
         validateDates(createAllocationDTO.getStartAt(), createAllocationDTO.getEndAt(), validationErrors);
+
+        throwOnError(validationErrors);
+    }
+
+    public void validate(Long allocationId, UpdateAllocationDTO updateAllocationDTO){
+
+        var validationErrors = new ValidationErrors();
+
+        validateRequired(allocationId, ALLOCATION_ID, validationErrors);
+        validateSubject(updateAllocationDTO.getSubject(), validationErrors);
+        validateDates(updateAllocationDTO.getStartAt(), updateAllocationDTO.getEndAt(), validationErrors);
+
         throwOnError(validationErrors);
     }
 
